--- a/Languages/default-lt.xml
+++ b/Languages/default-lt.xml
@@ -75,7 +75,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Išsamus aprašas"/>
 		<rightAlign/>
 		<label text="Filtras:" tip="Įrašykite atrankos filtro žodžius"/>
-		<control id="107" width="130"/>
+		<control id="IDC_FILTER_BOX" width="130"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Dar..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Panel">
@@ -86,7 +86,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Išsamus aprašas"/>
 		<rightAlign/>
 		<label text="Filtras:" tip="Įrašykite atrankos filtro žodžius"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Dar..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Full">
@@ -100,7 +100,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Išsamus aprašas"/>
 		<rightAlign/>
 		<label text="Filtras:" tip="Įrašykite atrankos filtro žodžius"/>
-		<control id="107" width="150"/>
+		<control id="IDC_FILTER_BOX" width="150"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Dar..."/>
 	</toolbar>
 	<!-- BROWSE HOST WINDOW -->
@@ -119,7 +119,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Išsamus aprašas"/>
 		<rightAlign/>
 		<label text="Filtras:" tip="Įrašykite atrankos filtro žodžius"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Dar..."/>
 	</toolbar>
 	<toolbar name="CBrowseHostWnd">
@@ -132,7 +132,7 @@
 		<button id="ID_SEARCH_DETAILS" text="Išsamus aprašas"/>
 		<rightAlign/>
 		<label text="Filtras:" tip="Įrašykite atrankos filtro žodžius"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Dar..."/>
 	</toolbar>
 	<!-- DOWNLOADS WINDOW -->
@@ -212,32 +212,32 @@
 	<toolbar name="CLibraryHomeView.Physical">
 		<button id="ID_LIBRARY_FOLDERS" text="Bendrinti failus..."/>
 		<rightAlign/>
-		<label text="Ieškoti:" tip="Įrašykite paieškos kolekcijoje ieškinius"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Ieškoti"/>
 	</toolbar>
 	<toolbar name="CLibraryHomeView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="Sukurti albumą..."/>
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="Šalinti albumą"/>
 		<rightAlign/>
-		<label text="Ieškoti:" tip="Įrašykite paieškos kolekcijoje ieškinius"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Ieškoti"/>
 	</toolbar>
 	<toolbar name="CLibraryTileView.Virtual">
 		<button id="ID_LIBRARY_FOLDER_NEW" text="Sukurti albumą..."/>
 		<button id="ID_LIBRARY_ALBUM_DELETE" text="Šalinti albumą"/>
 		<rightAlign/>
-		<label text="Ieškoti:" tip="Įrašykite paieškos kolekcijoje ieškinius"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Ieškoti"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical.Basic">
 		<button id="ID_LIBRARY_LAUNCH" text="Atverti ar vykdyti"/>
 		<button id="ID_LIBRARY_ENQUEUE" text="Įtraukti į grojaraštį"/>
 		<rightAlign/>
-		<label text="Ieškoti:" tip="Įrašykite paieškos kolekcijoje ieškinius"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Ieškoti"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Physical">
@@ -250,8 +250,8 @@
 		<button id="ID_LIBRARY_COPY" text="Kopijuoti"/>
 		<button id="ID_LIBRARY_DELETE" text="Trinti"/>
 		<rightAlign/>
-		<label text="Ieškoti:" tip="Įrašykite paieškos kolekcijoje ieškinius"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Ieškoti"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual.Basic">
@@ -259,8 +259,8 @@
 		<button id="ID_LIBRARY_ENQUEUE" text="Pridėti į grojaraštį"/>
 		<button id="ID_LIBRARY_FOLDER_ENQUEUE" text="Atverti albumą"/>
 		<rightAlign/>
-		<label text="Ieškoti:" tip="Įrašykite paieškos kolekcijoje ieškinius"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Ieškoti"/>
 	</toolbar>
 	<toolbar name="CLibraryFileView.Virtual">
@@ -270,8 +270,8 @@
 		<separator/>
 		<button id="ID_LIBRARY_PROPERTIES" text="Failo aprašas..."/>
 		<rightAlign/>
-		<label text="Ieškoti:" tip="Įrašykite paieškos kolekcijoje žodžius"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Ieškoti"/>
 	</toolbar>
 	<toolbar name="CLibraryCollectionView.Virtual">
@@ -279,8 +279,8 @@
 		<separator/>
 		<button id="ID_LIBRARY_FOLDER_DOWNLOAD" text="Parsisiųsti visus failus"/>
 		<rightAlign/>
-		<label text="Ieškoti:" tip="Įrašykite paieškos kolekcijoje žodžius"/>
-		<control id="108" width="120"/>
+		<separator/>
+		<control id="IDC_SEARCH_BOX" width="120"/>
 		<button id="ID_LIBRARY_SEARCH_QUICK" text="Ieškoti"/>
 	</toolbar>
 	<!-- MEDIA WINDOW -->
@@ -290,9 +290,9 @@
 		<button id="ID_MEDIA_STOP" text="Stabdyti"/>
 		<separator/>
 		<label text="Vieta:" tip="Nueiti į grotuvo failo tam tikrą vietą"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="Garsas:" tip="Derinti garsumą"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="Atverti failą"/>
 		<rightAlign/>
@@ -307,11 +307,11 @@
 		<button id="ID_MEDIA_STOP" text="Stabdyti"/>
 		<separator/>
 		<label text="Vieta:" tip="Nueiti į grotuvo failo tam tikrą vietą"/>
-		<control id="117" width="190" height="22"/>
+		<control id="IDC_MEDIA_POSITION" width="190" height="22"/>
 		<label text="Sparta:" tip="Derinti grotuvo failo atlikimo spartą"/>
-		<control id="118" width="40" height="22"/>
+		<control id="IDC_MEDIA_SPEED" width="40" height="22"/>
 		<label text="Garsas:" tip="Derinti garsumą"/>
-		<control id="119" width="50" height="22"/>
+		<control id="IDC_MEDIA_VOLUME" width="50" height="22"/>
 		<separator/>
 		<button id="ID_MEDIA_OPEN" text="Atverti"/>
 		<separator/>
@@ -365,7 +365,7 @@
 		<button id="ID_HITMONITOR_CLEAR" text="Valyti"/>
 		<rightAlign/>
 		<label text="Filtras:" tip="Įrašykite atrankos filtro žodžius"/>
-		<control id="107" width="160"/>
+		<control id="IDC_FILTER_BOX" width="160"/>
 		<button id="ID_SEARCH_FILTER_RAW" text="Dar..."/>
 	</toolbar>
 	<!-- HOST CACHE WINDOW -->
@@ -1484,15 +1484,13 @@
 <!-- Documents -->
 <documents>
 	<!-- Home View -->
-	<document name="CHomeViewCtrl" crBackground="FFFFFF" leftMargin="16" topMargin="0">
+	<document name="CHomeViewCtrl" leftMargin="16" topMargin="0">
 		<styles>
 			<style name="default">
 				<font face="Verdana" size="12"/>
-				<colours text="000000" link="0000FF" hover="FF0000"/>
 			</style>
 			<style name="heading">
 				<font face="Trebuchet MS" size="16" weight="800"/>
-				<colours text="800000"/>
 			</style>
 		</styles>
 		<anchor id="Header" width="32" height="172"/>
@@ -2625,6 +2623,7 @@
 	<string id="8337" value="Patikimas"/>
 	<string id="13000" value="Ar tikrai norite ištrinti pasirinktas saugos taisykles? Šio žingsnio negalėsite atšaukti."/>
 	<string id="13001" value="Failai, bendrinami internetu"/>
+	<string id="16063" value="Prievado peradresavimas naudojant UPnP buvo nesėkmingas po 10 bandymų."/>
 	<string id="16064" value="Startuojamas „Shareaza“ tinklo branduolys..."/>
 	<string id="16065" value="Neįmanoma susieti %s adreso %i prievado įeinantiems susijungimams. Įeinantys susijungimai nebus palaikomi."/>
 	<string id="16066" value="Stabdomas „Shareaza“ tinklo branduolys..."/>
@@ -2878,6 +2877,7 @@
 	<string id="16535" value="Bendra UDP išsiuntimų greitaveika"/>
 	<string id="16536" value="Gnutella gautų/išsiųstų ping santykis"/>
 	<string id="16537" value="Gnutella gautų/išsiųstų pong santykis"/>
+	<string id="16538" value="Susijungimų klaidos (%)"/>
 	<string id="16768" value="Gautas URL, adresas „%s“"/>
 	<string id="16769" value="Neįmanoma išnagrinėti URL: „Shareaza“ nesupranta šio adreso."/>
 	<string id="16770" value="Neįmanoma parodyti URL veiksmo dialogo lango, nes „Shareaza“ yra užimta."/>
@@ -3862,12 +3862,13 @@
 		<control caption="Gerai"/>
 		<control caption="Atšaukti"/>
 	</dialog>
-	<dialog name="CGraphItemDlg" cookie="BuBuBuCoCoStStEdBuBuStBu" caption="Grafiko elemento ypatybės">
+	<dialog name="CGraphItemDlg" cookie="BuBuBuCoStEdStEdBuBuStBu" caption="Grafiko elemento ypatybės">
 		<control caption="Gerai"/>
 		<control caption="Atšaukti"/>
 		<control caption="Š_altinis:"/>
-		<control/><control/>
-		<control caption="Parametras:"/>
+		<control/>
+		<control caption="Daugiklis:"/>
+		<control/>
 		<control caption="Vienetai:"/>
 		<control/>
 		<control caption="_Vaizdas:"/>
